--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">NeWork</string>
-    <string name="name_login_button">Login</string>
+    <string name="title_login_button">Login</string>
     <string name="title_reg">Registration</string>
     <string name="hint_login_edit_text">Login</string>
     <string name="hint_password_edit_text">Password</string>
@@ -66,4 +66,15 @@
     <string name="error_loading">Error loading data</string>
     <string name="desc_icon_add_new_event">Icon Add Event</string>
     <string name="desc_icon_add_new_post">Icon Add Post</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="my_profile">My profile</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="hint_password_repeat_edit_text">Repeat password</string>
+    <string name="sign_in_dialog">Sign in to proceed</string>
+    <string name="dialog_cancel">Cancel</string>
+    <string name="sign_out_dialog">Are you sure?</string>
+    <string name="authentication">Authentication</string>
+    <string name="don_t_have_account">Don\'t have an account? Register</string>
+    <string name="password_empty">Password cannot empty</string>
 </resources>
