--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,11 @@
     <string name="attachment_no_more_15mb">Attachment no more 15Mb</string>
     <string name="hint_text">Text</string>
     <string name="share">Share</string>
+    <string name="select_date">Select date</string>
+    <string name="enter_dates">Enter dates\n</string>
+    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
+    <string name="start_date">Start date</string>
+    <string name="end_date">End Date\n</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
