--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,5 @@
     <string name="end_date">End Date\n</string>
     <string name="ok">Ok</string>
     <string name="cancel">Cancel</string>
+    <string name="looking_for_a_job">looking for a job</string>
 </resources>
