added toast select date  , ru_string

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">NeWork</string>
-    <string name="title_login_button">Вход</string>
+    <string name="title_reg_button">Зарегистрироваться</string>
     <string name="title_reg">Регистрация</string>
+    <string name="hint_login_edit_text">Логин</string>
+    <string name="hint_password_edit_text">Пароль</string>
+    <string name="hint_name_job_edit_text">Название компании</string>
+    <string name="avatar_load_button">Кнопка загрузки аватара</string>
+    <string name="avatar_image">Изображение аватара</string>
+    <string name="posts_item_menu">Пост</string>
+    <string name="events_item_menu">События</string>
+    <string name="users_item_menu">Пользователи</string>
+    <string name="title_event">Событие</string>
+    <string name="desc_avatar_image">Изображение аватара</string>
+    <string name="title_likers">Оценили</string>
+    <string name="desc_icon_like">Иконка Лайка</string>
+    <string name="title_participant">Участник</string>
+    <string name="desc_icon_people">Иконка людей</string>
+    <string name="desc_ic_geo_location">"Иконка геолокации "</string>
+    <string name="title_site">Сайт</string>
+    <string name="title_mentioned">Упомянутые</string>
+    <string name="desc_icon_mentioned">Иконка упомянутых</string>
+    <string name="desc_icon_menu_button">Иконка кнопки меню</string>
+    <string name="desc_attachment_image">Вложение изображение</string>
+    <string name="desc_image_play_button">Картинка кнопка играть</string>
+    <string name="desc_icon_share">Иконка поделиться</string>
+    <string name="save_item_menu">Сохранить</string>
+    <string name="desc_icon_button_save">Иконка кнопки сохранить</string>
+    <string name="title_new_post">Новый пост</string>
+    <string name="title_new_item">Новый элемент</string>
+    <string name="title_post">Пост</string>
+    <string name="title_speakers">Спикеры</string>
+    <string name="mention_item_menu">Упоминание</string>
+    <string name="load_attachment_item_menu">Загрузка вложения</string>
+    <string name="desc_icon_attachment">Иконка вложения</string>
+    <string name="desc_icon_take_a_photo">Иконка выбора фото</string>
+    <string name="text_menu_item_take_a_photo">Выбор фото</string>
+    <string name="text_button_remove">Удалить</string>
+    <string name="title_new_event">Новое событие</string>
+    <string name="desc_button_remove">Кнопка удаления</string>
+    <string name="hint_date_event">Дата</string>
+    <string name="desc_icon_calendar">Иконка Календаря</string>
+    <string name="title_type_event">Тип</string>
+    <string name="desc_icon_button_delete">Иконка кнопку удалить</string>
+    <string name="desc_icon_profile">Иконка профиля</string>
+    <string name="profile_item_menu">Профиль</string>
+    <string name="post_geolocation_item_menu">Геолокация</string>
+    <string name="share_item_menu">Поделиться</string>
+    <string name="title_tab_item_user_details_first">Стена</string>
+    <string name="title_tab_item_user_details_second">Работа</string>
+    <string name="title_new_job">Новая работа</string>
+    <string name="hint_position_edit_text">Должность</string>
+    <string name="name_create_job_button">Создать</string>
+    <string name="link">Ссылка</string>
+    <string name="menu_options_edit">Редактировать</string>
+    <string name="menu_options_remove">Удалить</string>
+    <string name="retry_loading">Повторить</string>
+    <string name="error_loading">Ошибка при загрузке данных</string>
+    <string name="desc_icon_add_new_event">Иконка Добавления События</string>
+    <string name="desc_icon_add_new_post">Иконка Добавления сообщения</string>
+    <string name="sign_in">Войти</string>
+    <string name="sign_up">Зарегистрироваться</string>
+    <string name="my_profile">Мой профиль</string>
+    <string name="sign_out">Выйти</string>
+    <string name="hint_password_repeat_edit_text">Повторить пароль</string>
+    <string name="sign_in_dialog">Войдите в систему, чтобы продолжить</string>
+    <string name="dialog_cancel">Отменить</string>
+    <string name="sign_out_dialog">Вы уверены?</string>
+    <string name="authentication">Идентификация</string>
+    <string name="don_t_have_account">У вас нет учетной записи? Зарегистрировать</string>
+    <string name="password_empty">Пароль не может быть пустым</string>
+    <string name="error_user_exist">Пользователь уже существует</string>
+    <string name="error_format_image">Недопустимый формат изображения</string>
+    <string name="pass_don_t_match">Пароли не совпадают</string>
+    <string name="cancelled">Задание отменено</string>
+    <string name="desc_select_date">Выбрать дату</string>
+    <string name="attachment_no_more_15mb">"    23 / 10000  Вложение не более 15 Мб  "</string>
+    <string name="hint_text">Текст</string>
+    <string name="share">Поделиться</string>
+    <string name="select_date">Выбрать дату</string>
+    <string name="enter_dates">Ввод даты[...]</string>
+    <string name="start_date">Дата начало</string>
+    <string name="end_date">Дата конец[...]</string>
+    <string name="cancel">Назад</string>
+    <string name="looking_for_a_job">В поисках работы</string>
+    <string name="need_permission">Требуется разрешение на определение местоположения</string>
+    <string name="desc_button_plus">Кнопка увеличить маштаб</string>
+    <string name="desc_button_minus">Кнопка уменьшить маштаб</string>
+    <string name="desc_button_location">Кнопка местоположения</string>
+    <string name="toast_select_date_event">Выберите дату события</string>
 </resources>
