--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,14 +15,14 @@
     <string name="desc_avatar_image">Изображение аватара</string>
     <string name="title_likers">Оценили</string>
     <string name="desc_icon_like">Иконка Лайка</string>
-    <string name="title_participant">Участник</string>
+    <string name="title_participant">Участники</string>
     <string name="desc_icon_people">Иконка людей</string>
     <string name="desc_ic_geo_location">"Иконка геолокации "</string>
     <string name="title_site">Сайт</string>
     <string name="title_mentioned">Упомянутые</string>
     <string name="desc_icon_mentioned">Иконка упомянутых</string>
     <string name="desc_icon_menu_button">Иконка кнопки меню</string>
-    <string name="desc_attachment_image">Вложение изображение</string>
+    <string name="desc_attachment_image">Вложение изображения</string>
     <string name="desc_image_play_button">Картинка кнопка играть</string>
     <string name="desc_icon_share">Иконка поделиться</string>
     <string name="save_item_menu">Сохранить</string>
@@ -40,9 +40,9 @@
     <string name="title_new_event">Новое событие</string>
     <string name="desc_button_remove">Кнопка удаления</string>
     <string name="hint_date_event">Дата</string>
-    <string name="desc_icon_calendar">Иконка Календаря</string>
-    <string name="title_type_event">Тип</string>
-    <string name="desc_icon_button_delete">Иконка кнопку удалить</string>
+    <string name="desc_icon_calendar">Иконка календаря</string>
+    <string name="title_type_event">Форма события</string>
+    <string name="desc_icon_button_delete">Иконка кнопки удалить</string>
     <string name="desc_icon_profile">Иконка профиля</string>
     <string name="profile_item_menu">Профиль</string>
     <string name="post_geolocation_item_menu">Геолокация</string>
@@ -57,8 +57,8 @@
     <string name="menu_options_remove">Удалить</string>
     <string name="retry_loading">Повторить</string>
     <string name="error_loading">Ошибка при загрузке данных</string>
-    <string name="desc_icon_add_new_event">Иконка Добавления События</string>
-    <string name="desc_icon_add_new_post">Иконка Добавления сообщения</string>
+    <string name="desc_icon_add_new_event">Иконка добавления события</string>
+    <string name="desc_icon_add_new_post">Иконка добавления сообщения</string>
     <string name="sign_in">Войти</string>
     <string name="sign_up">Зарегистрироваться</string>
     <string name="my_profile">Мой профиль</string>
@@ -68,7 +68,7 @@
     <string name="dialog_cancel">Отменить</string>
     <string name="sign_out_dialog">Вы уверены?</string>
     <string name="authentication">Идентификация</string>
-    <string name="don_t_have_account">У вас нет учетной записи? Зарегистрировать</string>
+    <string name="don_t_have_account">У вас нет учетной записи? Зарегистрироваться</string>
     <string name="password_empty">Пароль не может быть пустым</string>
     <string name="error_user_exist">Пользователь уже существует</string>
     <string name="error_format_image">Недопустимый формат изображения</string>
